This commit will
fix on-tap issues with fleet and it will make the fanout lists a lot nicer to work with

--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-create.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-create.html
@@ -63,9 +63,9 @@
 
             <app-header reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="cancel" icon="close"="_handleActionCancel"></paper-icon-button>
+                    <paper-icon-button id="cancel" icon="close" on-tap="_handleActionCancel"></paper-icon-button>
                     <div main-title id="title">Create</div>
-                    <paper-icon-button id="create" icon="check"="_handleActionCreate"></paper-icon-button>
+                    <paper-icon-button id="create" icon="check" on-tap="_handleActionCreate"></paper-icon-button>
                 </app-toolbar>
             </app-header>
 
