--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-list.html
@@ -86,11 +86,11 @@
 
             <app-header slot="header" reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="menu" icon="menu"="_handleActionMenu"></paper-icon-button>
+                    <paper-icon-button id="menu" icon="menu" on-tap="_handleActionMenu"></paper-icon-button>
                     <paper-icon-button id="back" icon="arrow-back" reveal$="[[reveal]]" on-tap="_handleActionBack"></paper-icon-button>
                     <div main-title id="title">Boats</div>
                     <paper-icon-button id="delete" icon="delete" reveal$="[[reveal]]" on-tap="_handleActionDeleteItems"></paper-icon-button>
-                    <paper-icon-button id="logout" icon="exit-to-app"="_handleActionLogout"></paper-icon-button>
+                    <paper-icon-button id="logout" icon="exit-to-app" on-tap="_handleActionLogout"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
@@ -99,7 +99,7 @@
                 <crew-team-manager-fleet-list-message id="message"></crew-team-manager-fleet-list-message>
             </iron-pages>
 
-            <paper-fab id="fab" icon="add"="_handleActionCreate"></paper-fab>
+            <paper-fab id="fab" icon="add" on-tap="_handleActionCreate"></paper-fab>
         </app-header-layout>
 
         <paper-toast id="toast" duration="4000">[[_toast]]</paper-toast>
