--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-edit.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-edit.html
@@ -63,9 +63,9 @@
 
             <app-header reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="back" icon="arrow-back"="_handleActionBack"></paper-icon-button>
+                    <paper-icon-button id="back" icon="arrow-back" on-tap="_handleActionBack"></paper-icon-button>
                     <div main-title id="title">Edit</div>
-                    <paper-icon-button id="save" icon="check"="_handleActionSave"></paper-icon-button>
+                    <paper-icon-button id="save" icon="check" on-tap="_handleActionSave"></paper-icon-button>
                 </app-toolbar>
             </app-header>
 
