--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list-results.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list-results.html
@@ -48,13 +48,34 @@
             .athlete-info-location {
                 @apply(--paper-font-caption);
             }
+
+            .athlete-avatar[reveal],
+            .check-avatar {
+                display: none;
+            }
+
+            .athlete-avatar,
+            .check-avatar[reveal] {
+                display: inline-block;
+            }
+
+            .check-avatar[reveal] {
+                @apply(--layout-horizontal);
+                @apply(--layout-center-justified);
+                margin: 8px;
+                width: 32px;
+                height: 32px;
+                border-radius: 50%;
+                background-color: #A3A3A3;
+            }
         </style>
 
-        <iron-list id="list" items="[[data]]" as="item" elected-items="selectedItems" selection-enabled multi-selection>
+        <iron-list id="list" items="[[data]]" as="item" selected-items="{{selectedItems}}" selection-enabled multi-selection>
             <template>
-                <div class$="[[_computedClass(selected)]]"="_handleItemClick">
+                <div class$="[[_computedClass(selected)]]" on-tap="_handleItemClick">
 
-                    <crew-team-manager-avatar class="athlete-avatar" value="[[item.firstName]]"></crew-team-manager-avatar>
+                    <crew-team-manager-avatar class="athlete-avatar" reveal$="[[_isCheck(selected)]]" value="[[item.firstName]]"></crew-team-manager-avatar>
+                    <paper-icon-button class="check-avatar" reveal$="[[_isCheck(selected)]]" icon="check"></paper-icon-button>
                     <div class="athlete-info">
                         <div class="athlete-info-name">
                             [[item.firstName]] [[item.lastName]]
@@ -76,6 +97,12 @@
                 return 'crew-team-manager-fleet-roster-list-results'
             }
 
+            static get observers() {
+                return [
+                    '_selectedChange(selected)'
+                ]
+            }
+
             static get properties() {
                 return {
                     data: {
@@ -85,7 +112,9 @@
                     selectedItems: {
                         type: Object,
                         value: {}
-                    }
+                    },
+
+                    selected: Boolean
 
                 }
             }
@@ -96,6 +125,23 @@
                     classes += '-selected';
                 }
                 return classes;
+            }
+
+            _isCheck(isSelected) {
+                let value = false;
+                if (isSelected) {
+                    value = true;
+                }
+
+                return value;
+            }
+
+            _selectedChange(selected) {
+                if (!selected) {
+                    while (this.selectedItems.length > 0) {
+                        this.$.list.deselectItem(this.selectedItems[0]);
+                    }
+                }
             }
 
             _handleItemClick(e) {
