--- a/elements/crew-team-manager-roster/crew-team-manager-roster-erg-list-results.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-erg-list-results.html
@@ -48,13 +48,34 @@
             .erg-info-location {
                 @apply(--paper-font-caption);
             }
+
+            .erg-avatar[reveal],
+            .check-avatar {
+                display: none;
+            }
+
+            .erg-avatar,
+            .check-avatar[reveal] {
+                display: inline-block;
+            }
+
+            .check-avatar[reveal] {
+                @apply(--layout-horizontal);
+                @apply(--layout-center-justified);
+                margin: 8px;
+                width: 32px;
+                height: 32px;
+                border-radius: 50%;
+                background-color: #A3A3A3;
+            }
         </style>
 
         <iron-list id="list" items="[[data]]" as="item" selected-item="{{selectedItem}}" selection-enabled>
             <template>
                 <div class$="[[_computedClass(selected)]]" on-tap="_handleItemClick">
 
-                    <crew-team-manager-avatar class="erg-avatar" value="[[item.number]] % 10"></crew-team-manager-avatar>
+                    <crew-team-manager-avatar class="erg-avatar" reveal$="[[_isCheck(selected)]]" value="[[item.number]] % 10"></crew-team-manager-avatar>
+                    <paper-icon-button class="check-avatar" reveal$="[[_isCheck(selected)]]" icon="check"></paper-icon-button>
                     <div class="erg-info">
                         <div class="erg-info-number">
                             Number: [[item.number]]
@@ -76,6 +97,12 @@
                 return 'crew-team-manager-roster-erg-list-results'
             }
 
+            static get observers() {
+                return [
+                    '_selectedChange(selected)'
+                ]
+            }
+
             static get properties() {
                 return {
                     data: {
@@ -91,7 +118,7 @@
                         value: {}
                     },
 
-
+                    selected: Boolean
                 }
             }
 
@@ -101,6 +128,21 @@
                     classes += '-selected';
                 }
                 return classes;
+            }
+
+            _isCheck(isSelected) {
+                let value = false;
+                if (isSelected) {
+                    value = true;
+                }
+
+                return value;
+            }
+
+            _selectedChange(selected) {
+                if (!selected) {
+                    this.$.list.deselectItem(this.selectedItem);
+                }
             }
 
             _handleItemClick(e) {
