--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-race-list-results.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-race-list-results.html
@@ -53,13 +53,34 @@
             .race-info-time {
                 @apply(--paper-font-caption);
             }
+
+            .race-avatar[reveal],
+            .check-avatar {
+                display: none;
+            }
+
+            .race-avatar,
+            .check-avatar[reveal] {
+                display: inline-block;
+            }
+
+            .check-avatar[reveal] {
+                @apply(--layout-horizontal);
+                @apply(--layout-center-justified);
+                margin: 8px;
+                width: 32px;
+                height: 32px;
+                border-radius: 50%;
+                background-color: #A3A3A3;
+            }
         </style>
 
         <iron-list id="list" items="[[data]]" as="item" selected-items="{{selectedItems}}" selection-enabled multi-selection>
             <template>
                 <div class$="[[_computedClass(selected)]]" on-tap="_handleItemClick">
 
-                    <crew-team-manager-avatar class="race-avatar" value="[[item.eventName]]"></crew-team-manager-avatar>
+                    <crew-team-manager-avatar class="race-avatar" reveal$="[[_isCheck(selected)]]" value="[[item.eventName]]"></crew-team-manager-avatar>
+                    <paper-icon-button class="check-avatar" reveal$="[[_isCheck(selected)]]" icon="check"></paper-icon-button>
                     <div class="race-info">
                         <div class="race-info-eventName">
                             [[item.eventName]]
@@ -81,6 +102,12 @@
                 return 'crew-team-manager-schedule-race-list-results'
             }
 
+            static get observers() {
+                return [
+                    '_selectedChange(selected)'
+                ]
+            }
+
             static get properties() {
                 return {
                     data: {
@@ -94,7 +121,9 @@
                     selectedItems: {
                         type: Object,
                         value: {}
-                    }
+                    },
+
+                    selected: Boolean
                 }
             }
 
@@ -104,6 +133,23 @@
                     classes += '-selected';
                 }
                 return classes;
+            }
+
+            _isCheck(isSelected) {
+                let value = false;
+                if (isSelected) {
+                    value = true;
+                }
+
+                return value;
+            }
+
+            _selectedChange(selected) {
+                if (!selected) {
+                    while (this.selectedItems.length > 0) {
+                        this.$.list.deselectItem(this.selectedItems[0]);
+                    }
+                }
             }
 
             _handleItemClick(e) {
