--- a/elements/crew-team-manager-compare/crew-team-manager-compare-list-results.html
+++ b/elements/crew-team-manager-compare/crew-team-manager-compare-list-results.html
@@ -38,6 +38,12 @@
                 border-bottom: solid 1px grey;
             }
 
+            .athlete-selected {
+                background-color: #ddd;
+                @apply(--layout-horizontal);
+                border-bottom: solid 1px grey;
+            }
+
             .athlete-avatar {
                 margin: 8px;
             }
@@ -72,7 +78,7 @@
         <div id="athletes-list-one">
             <iron-list id="list" items="[[data]]" as="item" scroll-target="athletes-list-one" selected-item="{{selectedItemOne}}" selection-enabled>
                 <template>
-                    <div class="athlete" on-tap="_handleItemClick1">
+                    <div class$="[[_computedSelected(selected)]]" on-tap="_handleItemClick1">
 
                         <crew-team-manager-avatar class="athlete-avatar" value="[[item.firstName]]"></crew-team-manager-avatar>
                         <div class="athlete-info">
@@ -90,10 +96,9 @@
         </div>
 
         <div id="athletes-list-two">
-            <iron-list id="list" items="[[data]]" as="item" scroll-target="athletes-list-two" selected-item="{{selectedItemTwo}}" selection-enabled
-                on-selected-item-changed="_handleItemSelect">
+            <iron-list id="list" items="[[data]]" as="item" scroll-target="athletes-list-two" selected-item="{{selectedItemTwo}}" selection-enabled>
                 <template>
-                    <div class="athlete" on-tap="_handleItemClick2">
+                    <div class$="[[_computedSelected(selected)]]" on-tap="_handleItemClick2">
 
                         <crew-team-manager-avatar class="athlete-avatar" value="[[item.firstName]]"></crew-team-manager-avatar>
                         <div class="athlete-info">
@@ -134,6 +139,14 @@
                     },
 
                 }
+            }
+
+            _computedSelected(isSelected) {
+                let classes = 'athlete';
+                if (isSelected) {
+                    classes += '-selected';
+                }
+                return classes;
             }
 
             _computedClass(isSelected) {
