--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
@@ -227,6 +227,13 @@
             }
 
             _handleActionDelete(e) {
+                this.$.firebase.path = 'boatAthletes/' + this.boat;
+                this.$.firebase.destroy();
+                this.$.firebase.path = 'boatOars/' + this.boat;
+                this.$.firebase.destroy();
+                this.$.firebase.path = 'boatRiggers/' + this.boat;
+                this.$.firebase.destroy();
+                this.$.firebase.path = 'boats/' + this.boat;
                 this.$.firebase.destroy();
                 this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is + '-action-delete', {
                     bubbles: true,
