--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
@@ -191,6 +191,11 @@
             }
 
             _handleActionDelete(e) {
+                this.$.firebase.path = 'regattaPictures/' + this.regatta;
+                this.$.firebase.destroy();
+                this.$.firebase.path = 'regattaRaces/' + this.regatta;
+                this.$.firebase.destroy();
+                this.$.firebase.path = 'regattas/' + this.regatta;
                 this.$.firebase.destroy();
                 this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleDetail.is + '-action-delete', {
                     bubbles: true,
